<resources>
    <string name="app_name">AstroWeather</string>
    <string name="tab_text_1">SUN</string>
    <string name="tab_text_2">MOON</string>
    <string name="action_settings">Settings</string>
    <string name="dusk">Dusk:</string>
    <string name="sunset_azimuth">Sunset (azimuth):</string>
    <string name="sunset_time">Sunset (time):</string>
    <string name="sunrise_azimuth">Sunrise (azimuth):</string>
    <string name="sunrise_time">Sunrise (time):</string>
    <string name="dawn">Dawn:</string>
    <string name="the_day_of_the_synod_month">The day of the synod month:</string>
    <string name="moon_phase">Moon phase:</string>
    <string name="closest_full">Closest full:</string>
    <string name="closest_new">Closest new:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="enter_latitude">Enter latitude:</string>
    <string name="example_lat">38.898648</string>
    <string name="enter_longitude">Enter longitude:</string>
    <string name="enter_refresh_interval_s">Enter refresh interval [s]:</string>
    <string name="save">Save</string>
    <string name="example_lon">77.037692</string>
    <string name="example_freq">3</string>
    <string name="current_position">Current position:</string>
    <string name="current_time">Current time:</string>
    <string name="astroweather">AstroWeather</string>
    <string name="city_name">City name:</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="visibility">Visibility:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_direction">Wind direction:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="weather">Weather</string>
    <string name="weather_extended">Weather Extended</string>
    <string name="forecast">Forecast</string>
    <string name="sun_moon"><![CDATA[SUN & MOON]]></string>
    <string name="add">Add to favorites</string>
    <string name="manage_favorite_cities">Manage favorite cities</string>
    <string name="city">_CITY_</string>
    <string name="unit">UNIT</string>
    <string name="lon">LON</string>
    <string name="lat">LAT</string>
    <string name="name">NAME</string>
</resources>
